stylesheets/base/_layout.scss
.container {
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-columns: [col1] 100px [col2] auto [col3] 100px;
    grid-template-rows: [row1] 10% [row2] 10% [row3] auto;
    .nav {
        grid-column: col2 / col3;
        grid-row: row1 / row2;
        display: flex;
        justify-content: space-between;
        line-height: 1;
        .logo {
            display: flex;
            align-self: flex-end;
        }
        .links {
            display: flex;
            align-self: flex-end;
            justify-content: space-between;
        }
    }
    .work {
        grid-column: col2 / col3;
        grid-row: row3;
        display: flex;
        background: #eee;
    }
}

